[package]
name = "muse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
interprocess = "1.2.1"
libc = "0.2.153"
notify-rust = "4.10.0"
rodio = "0.17.3"
tokio = { version = "1.36.0", features = ["full"] }
